--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TeamTask - Flask App</title>
+    <title>Flask App</title>
 
     <!-- Bootstrap CSS -->
     <link 
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <h1 class="mb-0">TeamTask</h1>
+        <h1 class="mb-0">Flask-App</h1>
         <p class="mb-0">Gestión simple, diseño elegante</p>
     </header>
 
@@ -46,7 +46,7 @@
     </main>
 
     <footer>
-        <p class="mb-0">© 2025 TeamTask — Creado con ❤️ usando Flask & Bootstrap</p>
+        <p class="mb-0">© 2025 Flask App — Creado con ❤️ usando Flask & Bootstrap</p>
     </footer>
 
     <!-- Bootstrap JS -->
