--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <h1 class="mb-0">TeamTask</h1>
+        <h1 class="mb-0">Flask App</h1>
         <p class="mb-0">Gestión simple, diseño elegante</p>
     </header>
 
